--- a/views/Componentes.ejs
+++ b/views/Componentes.ejs
@@ -49,12 +49,12 @@ Infraestructura de redes: se necesitan muchas tecnologías de hardware, software
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/11.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/12.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/13.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/ConceptoDato">1</a></li>
+    <li class="page-item"><a class="page-link" href="/InformacionUtil">2</a></li>
+    <li class="page-item"><a class="page-link" href="/Componentes">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
