--- a/views/ConceptoDato.ejs
+++ b/views/ConceptoDato.ejs
@@ -12,9 +12,9 @@
 
 <div class="jumbotron text-center">
   <h2>Dato</h2>
-  <p>- Derivado del latin “datum” cuyo significado literal es “hecho”.</p> 
-  <p>- Un dato no dice nada por si solo, aislado en carece de valor o relevancia.</p> 
-  <p>- Los datos son los insumos para generar información.</p> 
+  <p>- Derivado del latin “datum” cuyo significado literal es “hecho”.</p>
+  <p>- Un dato no dice nada por si solo, aislado en carece de valor o relevancia.</p>
+  <p>- Los datos son los insumos para generar información.</p>
   <h2>Información</h2>
   <p>Se produce información cuando un conjunto de datos son procesados por un sistema. </p>
   <p>La información es un conjunto de datos acerca de algún suceso, hecho, fenómeno o situación, que organizados en un contexto determinado tienen su significado, cuyo propósito puede ser el de reducir la incertidumbre o incrementar el conocimiento acerca de algo.</p>
@@ -25,12 +25,12 @@
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/11.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/12.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/13.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/ConceptoDato">1</a></li>
+    <li class="page-item"><a class="page-link" href="/InformacionUtil">2</a></li>
+    <li class="page-item"><a class="page-link" href="/Componentes">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
