--- a/views/apartado1.ejs
+++ b/views/apartado1.ejs
@@ -14,9 +14,9 @@
   <h1>Bienvenido al Proyecto Final de</h1>
   <h1>Sistemas de Informacion</h1>
   <h2/>Apartado 1</h2>
-  <p>Pagina 1 - Dato, Información y Sistemas de Información</p> 
-  <p>Pagina 2 - Información Útil</p> 
-  <p>Pagina 3 - Componentes Basicos de unSistema de Información</p> 
+  <p>Pagina 1 - Dato, Información y Sistemas de Información</p>
+  <p>Pagina 2 - Información Útil</p>
+  <p>Pagina 3 - Componentes Basicos de unSistema de Información</p>
 <p><a href="link git">GitHub</a></p>
 <p><a href="link trello">Trello</a></p>
 </div>
@@ -24,12 +24,12 @@
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/11.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/12.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/13.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/ConceptoDato">1</a></li>
+    <li class="page-item"><a class="page-link" href="/InformacionUtil">2</a></li>
+    <li class="page-item"><a class="page-link" href="/Componentes">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
