--- a/views/InformacionUtil.ejs
+++ b/views/InformacionUtil.ejs
@@ -22,7 +22,7 @@
  <p>	• Económica .- El costo de la producción de la información debe ser relativamente barato. Las personas que toman las decisiones siempre deben balancear el valor de la información con el costo de producirla.</p>
 <p>		• Flexible.- La información es fl exible cuando puede utilizarse para una gran variedad de propósitos</p>
 <p>		• Relevante.- Es relevante cuando es importante para las personas que toman las decisiones.</p>
-<p>		• Segura.- Protección al acceso de la información. 
+<p>		• Segura.- Protección al acceso de la información.
 <p>		• Accesible.- Los usuarios autorizados deben poder acceder a la información de una manera fácil, de tal forma que puedan obtenerla  en el formato correcto y en el tiempo preciso para satisfacer sus necesidades.</p>
 <p>		• Simple.- La información debe establecerse en términos claros y concisos.</p>
 <p>		• Oportuna.- Cuando se requiere y tiene un valor para el negocio.
@@ -33,12 +33,12 @@
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/11.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/12.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/13.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/ConceptoDato">1</a></li>
+    <li class="page-item"><a class="page-link" href="/InformacionUtil">2</a></li>
+    <li class="page-item"><a class="page-link" href="/Componentes">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
