--- a/views/MIS.ejs
+++ b/views/MIS.ejs
@@ -35,12 +35,12 @@
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/21.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/22.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/23.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/TPS">1</a></li>
+    <li class="page-item"><a class="page-link" href="/CRM">2</a></li>
+    <li class="page-item"><a class="page-link" href="/MIS">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
