--- a/views/TPS.ejs
+++ b/views/TPS.ejs
@@ -19,34 +19,34 @@
 • Aislamiento.
 • Durabilidad(Persistencia) </h3>
  <h3>• Permiten consultar el estado de las operaciones en cualquier momento.</h3>
- <h3>Atomicidad.	
+ <h3>Atomicidad.
 • Se refiere a que la transacción debe ser completada en su totalidad o
 en su defecto debe realizarse una restauración del proceso a su
-estado original (antes iniciar la transacción).		
+estado original (antes iniciar la transacción).
 • Ejemplos:
 • ATM
 • Pago de nómina.</h3>
- <h3>Consistencia.	
+ <h3>Consistencia.
 • Se debe salvaguardar la integridad de la información cumpliendo
 reglas relacionales y de negocio.
 • El sistema debe ser capaz de identificar transacciones que vayan en
-contra este principio y debe realizar una operación de roll-back.	
+contra este principio y debe realizar una operación de roll-back.
 • Ejemplo: En un sistema de venta por internet, se solicita una compra para un
 cliente, se registra el pedido y se apartan los productos. Pero al momento de
 ralizar el pago la tarjeta de crédito no es aceptada. El sistema mantiene la
 integridad regresando los productos al stock.</h3>
- <h3>Aislamiento	
+ <h3>Aislamiento
 • Cada transacción debe ser considerada independiente de otras
 transacciones.
 • Esto permite que el sistema realice transacciones recurrentes y
 simultaneas.
 • Ejemplo: retiro de efectivo simultaneos.</h3>
- <h3>Durabilidad.	
+ <h3>Durabilidad.
 • La transacciones y sus operaciones internas deben ser almacenadas a
 un medio persistente, hasta el momento que otra operación o
 transacción cambie el estado de los datos.
 • En todo momento las transacciones aisladas pueden ser consultadas.</h3>
- <h3>¿En que área de la organización se emplean?.	
+ <h3>¿En que área de la organización se emplean?.
 • Sistemas de inventario
 • Sistemas de Producción.
 • Sistema de contabilidad y finanzas.
@@ -57,12 +57,12 @@ transacción cambie el estado de los datos.
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/21.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/22.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/23.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/TPS">1</a></li>
+    <li class="page-item"><a class="page-link" href="/CRM">2</a></li>
+    <li class="page-item"><a class="page-link" href="/MIS">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
