--- a/views/apartado1.ejs
+++ b/views/apartado1.ejs
@@ -17,8 +17,8 @@
   <p>Pagina 1 - Dato, Información y Sistemas de Información</p>
   <p>Pagina 2 - Información Útil</p>
   <p>Pagina 3 - Componentes Basicos de unSistema de Información</p>
-<p><a href="link git">GitHub</a></p>
-<p><a href="link trello">Trello</a></p>
+<p><a href="https://github.com/Branndon911/ICO_SCRUM_ARCADIA">GitHub</a></p>
+<p><a href="https://trello.com/b/Ob0WuZTX/icoscrumarcadia2807">Trello</a></p>
 </div>
 
 
