--- a/views/apartado2.ejs
+++ b/views/apartado2.ejs
@@ -13,20 +13,20 @@
 <div class="jumbotron text-center">
   <h1>Bienvenido al Proyecto Final de Sistemas de Informacion</h1>
   <h2/>Apartado 2</h2>
-  <p>Pagina 1 - Sistemas de Informacion Transaccionales</p> 
-  <p>Pagina 2 - Sistemas de Informacion de Gestión de Relaciones con los Clientes</p> 
-  <p>Pagina 3 - Sistemas de Información Gerencial</p> 
+  <p>Pagina 1 - Sistemas de Informacion Transaccionales</p>
+  <p>Pagina 2 - Sistemas de Informacion de Gestión de Relaciones con los Clientes</p>
+  <p>Pagina 3 - Sistemas de Información Gerencial</p>
 </div>
 
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/21.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/22.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/23.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/TPS">1</a></li>
+    <li class="page-item"><a class="page-link" href="/CRM">2</a></li>
+    <li class="page-item"><a class="page-link" href="/MIS">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
