--- a/views/CRM.ejs
+++ b/views/CRM.ejs
@@ -20,7 +20,7 @@
  <h3>• Clientes satisfechos generan nuevos clientes por recomendación.</h3>
  <h3>• Recuperar un cliente perdido es el doble de difícil de atrar que a uno totalmente nuevo.</h3>
  <h3>Componentes de un CRM</h3>
- <h3>1.- Servicio al cliente: 
+ <h3>1.- Servicio al cliente:
 • Centros de atención Telefónica (Call-center).
 • Centros de ayuda (Help-Desk).
 • Apps y aplicaciones Web para el apoyo de clientes.
@@ -50,7 +50,7 @@ o interacción directa con el cliente. Pero si almacenan y procesan los
 datos adquiridos de él. Requiere de operaciones de analisis o Mineria
 de datos para obtener onformación compleja del comportamiento de
 clientes.</h3>
- <h3>Software CRM popular: 
+ <h3>Software CRM popular:
 • SAP
 • Oracle Peoplesoft
 • Salesforce.com
@@ -60,12 +60,12 @@ clientes.</h3>
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/21.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/22.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/23.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="/TPS">1</a></li>
+    <li class="page-item"><a class="page-link" href="/CRM">2</a></li>
+    <li class="page-item"><a class="page-link" href="/MIS">3</a></li>
   </ul>
 </nav>
-  
+
 
 </body>
 </html>
