--- a/views/apartado3.ejs
+++ b/views/apartado3.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Metodologi Agil y Scrum </title>
+<title> Metodologia Agil y Scrum </title>
 </head>
 
 <body> <p>La metodología ágil surge como sustituto a los métodos clásicos de gestión. La flexibilidad, la calidad y la necesidad de entregar proyectos y productos en cortos espacios de tiempo son una prioridad. Todo ello ha facilitado el nacimiento de la metodología ágil o agile methodology.</p>
