--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
   <ul class="pagination">
     <li class="page-item"><a class="page-link" href="/apartado1">Apartado 1</a></li>
     <li class="page-item"><a class="page-link" href="/apartado2">Apartado 2</a></li>
-    <li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/apartado3.html">Apartado 3</a></li>
+    <li class="page-item"><a class="page-link" href="/apartado3">Apartado 3</a></li>
 	<li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/apartado4.html">Apartado 4</a></li>
   </ul>
 </nav>
