--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
     <li class="page-item"><a class="page-link" href="/apartado1">Apartado 1</a></li>
     <li class="page-item"><a class="page-link" href="/apartado2">Apartado 2</a></li>
     <li class="page-item"><a class="page-link" href="/apartado3">Apartado 3</a></li>
-	<li class="page-item"><a class="page-link" href="C:/Users/Alpha/Desktop/apartado4.html">Apartado 4</a></li>
+   	<li class="page-item"><a class="page-link" href="/apartado4">Apartado 4</a></li>
   </ul>
 </nav>
 
